@@ -5,9 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>{% block title %}OF v2.0{% endblock %}</title>
+  <title>{% block title %}OncoFinder{% endblock %}</title>
 
-  <link rel="stylesheet" href="/static/css/bootstrap.css" type='text/css' />
+  <link rel="stylesheet" href="/static/components/bootstrap/dist/css/bootstrap.css" type='text/css' />
   <link rel="stylesheet" href="/static/css/style.css" type='text/css' />
   <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
